ci: stabilize lint and Linux deps; fix doctests; update ruff config
- Use uvx ruff to decouple lint from build and avoid extension file locks\n- Install X11 dev packages and pkg-config on Ubuntu in setup action\n- Mark Python examples as text in Rust docs to avoid doctest compilation\n- Adjust ruff config; fix imports/whitespace; run ruff format\n- Ignore Python extension artifacts via python/auroraview/_core.*

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/setup-auroraview/action.yml
+++ b/.github/actions/setup-auroraview/action.yml
@@ -69,6 +69,20 @@ runs:
           libglib2.0-dev \
           libpango1.0-dev \
           libcairo2-dev
+        # X11 and related dev packages needed by active-win-pos-rs and GUI crates on Linux
+        sudo apt-get install -y \
+          libx11-dev \
+          libx11-xcb-dev \
+          libxcb1-dev \
+          libxcb-render0-dev \
+          libxcb-shape0-dev \
+          libxcb-xfixes0-dev \
+          libxrandr-dev \
+          libxi-dev \
+          libxfixes-dev \
+          libxtst-dev \
+          pkg-config
+
 
     - name: Install dependencies
       if: inputs.install-dependencies == 'true'
