--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,6 @@ select = [
     "I",  # isort
     "B",  # flake8-bugbear
     "C4", # flake8-comprehensions
-    "UP", # pyupgrade
 ]
 ignore = [
     "E501",  # line too long, handled by formatter
@@ -85,6 +84,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+"tests/test_nuke_ipc.py" = ["W293", "I001"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["auroraview"]
