--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -113,9 +113,10 @@ jobs:
         shell: bash
         env:
           QT_QPA_PLATFORM: offscreen
-          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --disable-software-rasterizer --single-process --no-sandbox
+          QT_OPENGL: software
+          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --use-gl=swiftshader --single-process --no-sandbox
           QTWEBENGINE_DISABLE_SANDBOX: '1'
-          WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS: --disable-gpu --disable-software-rasterizer --single-process --no-sandbox
+          WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS: --disable-gpu --use-gl=swiftshader --single-process --no-sandbox
         run: |
           # macOS Qt tests are flaky in CI headless mode - skip for now
           if [[ "$RUNNER_OS" == "macOS" ]]; then
