--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -123,7 +123,7 @@ jobs:
             echo "Skipping Qt tests on macOS CI (known issue with headless Qt WebEngine)"
             exit 0
           fi
-          python -m pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
+          uv run python -m pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
 
   # PR approval gate - all essential checks must pass
   pr-ready:
