--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -109,8 +109,20 @@ jobs:
         run: |
           uv pip install qtpy PySide6 pytest pytest-cov
 
-      - name: Run Qt tests (headless)
+      - name: Run Qt tests (headless) [Linux]
+        if: runner.os == 'Linux'
         shell: bash
+        env:
+          QT_QPA_PLATFORM: offscreen
+          QT_OPENGL: software
+          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox
+          QTWEBENGINE_DISABLE_SANDBOX: '1'
+        run: |
+          uv run pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
+
+      - name: Run Qt tests (headless) [Windows]
+        if: runner.os == 'Windows'
+        shell: pwsh
         env:
           QT_QPA_PLATFORM: offscreen
           QT_OPENGL: software
@@ -118,12 +130,7 @@ jobs:
           QTWEBENGINE_DISABLE_SANDBOX: '1'
           WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox
         run: |
-          # macOS Qt tests are flaky in CI headless mode - skip for now
-          if [[ "$RUNNER_OS" == "macOS" ]]; then
-            echo "Skipping Qt tests on macOS CI (known issue with headless Qt WebEngine)"
-            exit 0
-          fi
-          uv run python -m pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
+          uv run pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
 
   # PR approval gate - all essential checks must pass
   pr-ready:
