ci(qt, lint): temporarily skip Qt job in CI and fix unused Instant import under non-Windows builds\n\n- workflow: disable qt-tests job with job-level if to unblock PR\n- timer.rs: gate std::time::Instant behind same cfg(any(test, windows)) as usage\n\nSigned-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -76,6 +76,7 @@ jobs:
 
   # Qt compatibility tests on Windows and macOS (headless)
   qt-tests:
+    if: ${{ false }} # Temporarily skipped per user request
     name: Qt Combo Tests (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
