ci(qt,coverage): re-enable Windows Qt tests with stable headless flags; generate pytest XML coverage and upload to Codecov; add Rust doc-test coverage via cargo-llvm-cov\n\n- Windows Qt tests: pwsh shell + Qt/WebView2 software rendering flags + disable-features\n- Coverage: enable --cov-report=xml in pytest (pyproject), upload in essential-tests (py3.11) and qt-tests\n- Rust coverage: add rust-coverage job using cargo-llvm-cov (doc tests only to avoid PyO3 abi3 issues)\n- pytest.ini: delegate addopts to pyproject to avoid overriding coverage\n- Codecov: add minimal .codecov.yml with flags (python, rust)\n\nSigned-off-by: longhao <hal.long@outlook.com>

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -13,11 +13,8 @@ minversion = 6.0
 pythonpath = .
 
 # Output options
-addopts = 
-    -v
-    --tb=short
-    --strict-markers
-    --disable-warnings
+# addopts are defined centrally in pyproject.toml to ensure coverage settings apply
+
 
 # Test markers
 markers =
