--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -40,6 +40,16 @@ jobs:
           upload-artifacts: 'true'
           artifact-name: 'essential-test-results-py${{ matrix.python-version }}'
 
+      - name: Upload Python coverage to Codecov (py${{ matrix.python-version }})
+        if: matrix.python-version == '3.11'
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage.xml
+          flags: python,unit,py${{ matrix.python-version }},${{ runner.os }}
+          fail_ci_if_error: false
+          verbose: true
+
+
   # Code quality checks
   quality-checks:
     name: Code Quality
@@ -74,15 +84,46 @@ jobs:
           test-wheel: 'true'
           upload-wheel: 'false'  # Don't upload in PR checks
 
+  # Rust coverage via cargo-llvm-cov (doc tests only to avoid PyO3 abi3 linking issues)
+  rust-coverage:
+    name: Rust Coverage (llvm-cov, doc tests)
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Rust toolchain (with llvm-tools)
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: llvm-tools-preview
+
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-llvm-cov
+
+      - name: Generate Rust coverage (lcov)
+        run: |
+          cargo llvm-cov --doc --workspace --no-default-features --features "threaded-ipc" --lcov --output-path lcov.info
+
+      - name: Upload Rust coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: lcov.info
+          flags: rust
+          fail_ci_if_error: false
+          verbose: true
+
+
   # Qt compatibility tests on Windows and macOS (headless)
   qt-tests:
-    if: ${{ false }} # Temporarily skipped per user request
+
     name: Qt Combo Tests (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [windows-latest]
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v5
@@ -110,34 +151,36 @@ jobs:
         run: |
           uv pip install qtpy PySide6 pytest pytest-cov
 
-      - name: Run Qt tests (headless) [Linux]
-        if: runner.os == 'Linux'
-        shell: bash
-        env:
-          QT_QPA_PLATFORM: offscreen
-          QT_OPENGL: software
-          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox
-          QTWEBENGINE_DISABLE_SANDBOX: '1'
-        run: |
-          uv run pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
+
 
       - name: Run Qt tests (headless) [Windows]
         if: runner.os == 'Windows'
         shell: pwsh
         env:
+          QT_API: pyside6
+          CI: 'true'
           QT_QPA_PLATFORM: offscreen
           QT_OPENGL: software
-          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox
+          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox --disable-features=Accelerated2dCanvas,CanvasOopRasterization,UseSkiaRenderer,CalculateNativeWinOcclusion
           QTWEBENGINE_DISABLE_SANDBOX: '1'
-          WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox
+          WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox --disable-features=Accelerated2dCanvas,CanvasOopRasterization,UseSkiaRenderer,CalculateNativeWinOcclusion
         run: |
-          uv run pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
+          uv run pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -rA
+
+      - name: Upload Qt test coverage to Codecov (Windows)
+        if: runner.os == 'Windows'
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage.xml
+          flags: python,qt,windows
+          fail_ci_if_error: false
+          verbose: true
 
   # PR approval gate - all essential checks must pass
   pr-ready:
     name: PR Ready for Merge
     runs-on: ubuntu-latest
-    needs: [essential-tests, quality-checks, wheel-build-test, qt-tests]
+    needs: [essential-tests, quality-checks, wheel-build-test, rust-coverage, qt-tests]
     if: always()
 
     steps:
