--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ strict_optional = true
 # Pytest configuration
 [tool.pytest.ini_options]
 minversion = "7.0"
-addopts = "-ra -q --strict-markers --cov=auroraview --cov-report=term-missing --cov-report=html"
+addopts = "-ra -q --strict-markers --cov=auroraview --cov-report=term-missing --cov-report=html --cov-report=xml"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
