--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -92,6 +92,13 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - name: Install system dependencies (Ubuntu)
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libglib2.0-dev libgtk-3-dev libwebkit2gtk-4.1-dev
+
       - name: Setup Rust toolchain (with llvm-tools)
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -165,7 +172,7 @@ jobs:
           QTWEBENGINE_DISABLE_SANDBOX: '1'
           WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS: --disable-gpu --disable-gpu-compositing --in-process-gpu --use-gl=swiftshader --single-process --no-sandbox --disable-features=Accelerated2dCanvas,CanvasOopRasterization,UseSkiaRenderer,CalculateNativeWinOcclusion
         run: |
-          uv run pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -rA
+          uv run pytest tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="--cov=auroraview --cov-report=term-missing --cov-report=html --cov-report=xml -vv -rA -s"
 
       - name: Upload Qt test coverage to Codecov (Windows)
         if: runner.os == 'Windows'
