ci(rust-coverage): skip doctests (remove --doc); run llvm-cov on workspace with python-bindings enabled to avoid GUI/Py doctest runtime issues\n\nSigned-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -111,7 +111,7 @@ jobs:
 
       - name: Generate Rust coverage (lcov)
         run: |
-          cargo llvm-cov --doc --workspace --no-default-features --features "python-bindings,threaded-ipc" --lcov --output-path lcov.info
+          cargo llvm-cov --workspace --no-default-features --features "python-bindings,threaded-ipc" --lcov --output-path lcov.info
 
       - name: Upload Rust coverage to Codecov
         uses: codecov/codecov-action@v4
