build(pyo3): decouple xtension-module into feature xt-module (keep default tests linkable); keep abi3;\nci: maturin develop/build now passes --features ext-module where needed (Windows adds win-webview2).\nci(rust-coverage): with ext-module off by default, cargo llvm-cov can link PyO3 against interpreter for tests and avoid undefined Python symbols.\n\nSigned-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -48,11 +48,11 @@ runs:
       run: |
         uv pip install maturin
         if [ "$RUNNER_OS" = "Windows" ]; then
-          echo "Building with Windows feature: win-webview2"
-          uv run maturin develop --features win-webview2
+          echo "Building with Windows feature: win-webview2 + ext-module"
+          uv run maturin develop --features "win-webview2,ext-module"
         else
-          echo "Building without Windows-specific features"
-          uv run maturin develop
+          echo "Building with ext-module feature"
+          uv run maturin develop --features "ext-module"
         fi
       env:
         RUST_BACKTRACE: 1
