ci(coverage): harden Cargo networking & prefetch; run llvm-cov with --tests; maturin builds use ext-module; reduce crates.io timeout flakes\n\n- rust-coverage: switch to llvm-cov --tests to avoid PyO3/GUI unit tests runtime failures; keep features python-bindings,threaded-ipc\n- CI: add cargo fetch retry + CARGO_HTTP_TIMEOUT=600 CARGO_NET_RETRY=10 and sparse index in build-and-test, build-wheel, rust-coverage job\n- build-wheel/build-and-test: maturin develop/build use --features ext-module (decoupled from Cargo test path)\n- result: stable Rust lcov upload merged in Codecov with Python coverage; improved resilience to crates.io network issues\n\nSigned-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -42,6 +42,18 @@ runs:
           ${{ runner.os }}-build-${{ hashFiles('**/Cargo.lock', '**/pyproject.toml') }}-
           ${{ runner.os }}-build-
 
+    - name: Prefetch Cargo crates (retry)
+      shell: bash
+      run: |
+        set -e
+        n=0
+        until [ "$n" -ge 3 ]; do
+          echo "[TRY $((n+1))/3] cargo fetch...";
+          CARGO_HTTP_TIMEOUT=600 CARGO_NET_RETRY=10 cargo fetch --locked --verbose && break;
+          n=$((n+1));
+          echo "[WARN] cargo fetch failed, retrying in 5s..."; sleep 5;
+        done
+
     - name: Build extension
       id: build
       shell: bash
@@ -56,6 +68,9 @@ runs:
         fi
       env:
         RUST_BACKTRACE: 1
+        CARGO_HTTP_TIMEOUT: '600'
+        CARGO_NET_RETRY: '10'
+        CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
 
     - name: Run tests
       id: test
