--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -83,9 +83,25 @@ runs:
           ${{ runner.os }}-${{ inputs.target || 'default' }}-cargo-wheel-
           ${{ runner.os }}-cargo-
 
+    - name: Prefetch Cargo crates (retry)
+      shell: bash
+      run: |
+        set -e
+        n=0
+        until [ "$n" -ge 3 ]; do
+          echo "[TRY $((n+1))/3] cargo fetch...";
+          CARGO_HTTP_TIMEOUT=600 CARGO_NET_RETRY=10 cargo fetch --locked --verbose && break;
+          n=$((n+1));
+          echo "[WARN] cargo fetch failed, retrying in 5s..."; sleep 5;
+        done
+
     - name: Build wheel
       id: build
       uses: PyO3/maturin-action@v1
+      env:
+        CARGO_HTTP_TIMEOUT: '600'
+        CARGO_NET_RETRY: '10'
+        CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
       with:
         target: ${{ inputs.target }}
         args: ${{ inputs.maturin-args }}
