--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -89,6 +89,11 @@ jobs:
     name: Rust Coverage (llvm-cov, doc tests)
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    env:
+      CARGO_TERM_COLOR: always
+      CARGO_HTTP_TIMEOUT: '600'
+      CARGO_NET_RETRY: '10'
+      CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
     steps:
       - uses: actions/checkout@v5
 
@@ -104,6 +109,18 @@ jobs:
         with:
           components: llvm-tools-preview
 
+      - name: Prefetch Cargo crates (retry)
+        shell: bash
+        run: |
+          set -e
+          n=0
+          until [ "$n" -ge 3 ]; do
+            echo "[TRY $((n+1))/3] cargo fetch...";
+            CARGO_HTTP_TIMEOUT=600 CARGO_NET_RETRY=10 cargo fetch --locked --verbose && break;
+            n=$((n+1));
+            echo "[WARN] cargo fetch failed, retrying in 5s..."; sleep 5;
+          done
+
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2
         with:
@@ -111,7 +128,9 @@ jobs:
 
       - name: Generate Rust coverage (lcov)
         run: |
-          cargo llvm-cov --workspace --no-default-features --features "python-bindings,threaded-ipc" --lcov --output-path lcov.info
+          cargo llvm-cov --tests --workspace --no-default-features \
+            --features "python-bindings,threaded-ipc" \
+            --lcov --output-path lcov.info
 
       - name: Upload Rust coverage to Codecov
         uses: codecov/codecov-action@v4
