ci: enable win-webview2 feature for Windows wheel builds
- Add win-webview2 feature to Windows maturin build args
- This enables context_menu parameter support in Windows builds
- Fixes: TypeError: WebView.__new__() got an unexpected keyword argument 'context_menu'
- Required for DCC integration (Maya, Houdini, etc.)

The win-webview2 feature enables Windows-native WebView2 backend
which is necessary for embedded mode in DCC applications.

Signed-off-by: Hal Long <hal.long@outlook.com>

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -61,6 +61,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           python-version: ${{ inputs.python-version }}
+          maturin-args: '--release --out dist --find-interpreter --features ext-module,win-webview2'
           test-wheel: ${{ inputs.test-wheel }}
           artifact-name: 'wheels-windows-${{ matrix.target }}'
 
