refactor: consolidate create_for_dcc and create_embedded logic
- Merge duplicate window creation logic between create_for_dcc and create_embedded
- create_for_dcc now delegates to create_embedded for all embedding modes
- Properly support embedding WebView into Qt widgets using EmbedMode::Child
- Fix changelog generation in CI workflow:
  * Remove incorrect filter regex that excluded normal commits
  * Fix template syntax error (extra }})

This enables proper Qt object embedding while maintaining DCC integration.

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,7 +118,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           filter-author: (loonghao|renovate\\[bot\\]|dependabot\\[bot\\]|Renovate Bot)
-          filter: '[R|r]elease[d]\\s+[v|V]\\d(\\.\\d+){0,2}'
+          filter: ''
           template: |
             ## Bugs
             {{fix}}
@@ -130,8 +130,7 @@ jobs:
             {{refactor,perf,clean}}
 
             ## Misc
-            {{chore,style,ci}}
-            🔧 Nothing change}}
+            {{chore,style,ci,build||🔧 Nothing changed}}
 
             ## Unknown
             {{__unknown__}}
