test: add Qt marker to categorize Qt-dependent tests
- Add pytest.mark.qt marker to pytest.ini and conftest.py
- Mark all Qt-related test files with @pytest.mark.qt
- Auto-mark tests with 'test_qt' or 'qt_' in filename
- Tests marked with 'qt' will be skipped in non-Qt environments
- Fixes CI failures when Qt dependencies are not installed

Files updated:
- tests/pytest.ini: Add qt marker definition
- tests/conftest.py: Register qt marker and auto-mark Qt tests
- tests/test_qt_event_processor.py: Add @pytest.mark.qt to test class
- tests/test_qt_lifecycle.py: Add pytest.mark.qt to pytestmark
- tests/test_qt_backend.py: Add pytestmark = pytest.mark.qt
- tests/test_auto_process_events.py: Add pytestmark = pytest.mark.qt

Usage:
- Run all tests: pytest tests/
- Skip Qt tests: pytest tests/ -m 'not qt'
- Run only Qt tests: pytest tests/ -m qt

Signed-off-by: longhao <hal.long@outlook.com>

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -21,6 +21,7 @@ markers =
     ui: UI tests that require a display
     slow: Slow running tests
     maya: Tests that require Maya
+    qt: Tests that require Qt dependencies (qtpy and Qt bindings)
     headless: Tests that can run without display
     integration: Integration tests
     unit: Unit tests
