feat: migrate all Rust tests to rstest integration tests
- Migrated integration tests from source files to tests/ directory
- Kept unit tests in source files for testing private APIs
- Updated justfile and CI configuration to use rstest framework
- All 31 Rust integration tests + 40 Python tests passing
- Code coverage: 53.76% (exceeds 50% requirement)
- Fixed clippy warning in backend module

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -82,8 +82,11 @@ runs:
             just ci-test-basic
             ;;
           "rust")
-            echo "Running Rust doc tests (lib tests skipped due to abi3 linking issues)..."
+            echo "Running Rust tests (lib tests skipped due to abi3 linking issues)..."
+            echo "  -> Rust doc tests..."
             cargo test --doc
+            echo "  -> Rust integration tests (with rstest)..."
+            cargo test --test '*' --features "test-helpers"
             ;;
           "python")
             echo "Running Python unit tests..."
@@ -93,6 +96,8 @@ runs:
             echo "Running comprehensive test suite..."
             echo "  -> Rust doc tests..."
             cargo test --doc
+            echo "  -> Rust integration tests (with rstest)..."
+            cargo test --test '*' --features "test-helpers"
             echo "  -> Python unit tests..."
             just ci-test-python
             echo "  -> Basic functionality tests..."
