feat: migrate all unit tests to rstest framework
- Migrate 27 unit tests across 4 files to use rstest framework
  - src/lib.rs: 11 module import tests
  - src/utils/mod.rs: 6 IdGenerator tests
  - src/webview/timer.rs: 7 Timer unit tests
  - src/webview/protocol_handlers.rs: 3 MIME type tests
- Fix macOS CI test failure in test_timer_throttling_precise
  - Increase wait time from 25ms to 30ms for scheduler tolerance
- Fix PyPI duplicate file upload error
  - Add skip-existing: true to PyPI publish workflow
- Optimize release-please config
  - Remove unnecessary __init__.py version update
  - Python __version__ is auto-synced from Cargo.toml via env!()

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,7 @@ jobs:
           packages-dir: dist
           verbose: true
           print-hash: true
+          skip-existing: true  # Skip files that already exist on PyPI
 
   # Create GitHub Release
   github-release:
