feat: add CLI support for standalone WebView launcher
- Add Rust CLI binary with clap for argument parsing
- Support --url and --html flags for loading content
- Configure maturin to package CLI binary with Python wheel
- Add Python entry point for seamless CLI access
- Fix test_event_timer_error_recovery timing issue on Windows
- Add CLI documentation and usage examples

Signed-off-by: longhao <hal.long@outlook.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,10 +57,19 @@ Documentation = "https://github.com/loonghao/auroraview#readme"
 Repository = "https://github.com/loonghao/auroraview"
 Issues = "https://github.com/loonghao/auroraview/issues"
 
+[project.scripts]
+auroraview = "auroraview.__main__:main"
+
 [tool.maturin]
 python-source = "python"
 module-name = "auroraview._core"
-features = ["pyo3/extension-module", "pyo3/abi3-py37"]
+features = ["pyo3/extension-module", "pyo3/abi3-py37", "cli"]
+bindings = "pyo3"
+
+# Include CLI binary in the distribution
+[[tool.maturin.bin]]
+name = "auroraview"
+path = "src/bin/cli.rs"
 
 # Ruff configuration
 [tool.ruff]
