--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ categories = ["gui", "multimedia", "graphics"]
 name = "auroraview_core"
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "auroraview"
+path = "src/bin/cli.rs"
+required-features = ["cli"]
+
 [dependencies]
 # PyO3 for Python bindings
 pyo3 = { version = "0.27.1", features = ["abi3-py37"], optional = true }
@@ -71,6 +76,9 @@ mdns-sd = "0.17"                    # Pure Rust mDNS implementation
 warp = { version = "0.4", features = ["server"] }  # HTTP server for discovery endpoint
 hyper = { version = "1.0", features = ["full"] }  # HTTP client/server
 hyper-util = { version = "0.1", features = ["full"] }  # HTTP utilities for hyper v1
+
+# CLI dependencies
+clap = { version = "4.5", features = ["derive"], optional = true }
 
 # Future rendering engines (feature-gated)
 # servo = { git = "https://github.com/servo/servo", optional = true }
@@ -157,6 +165,9 @@ linux = []
 # Development features
 dev-tools = []
 hot-reload = []
+
+# CLI feature
+cli = ["clap"]
 
 # Performance features
 performance-monitoring = []  # Enable detailed performance tracking
