fix: add Cargo.lock to ensure reproducible builds
- Remove Cargo.lock from .gitignore
- Commit Cargo.lock for reproducible builds
- Fix GitHub Actions cache key calculation error
- This is a binary/application project, so Cargo.lock should be committed

This fixes the macOS build error: 'hashFiles('**/Cargo.lock') failed'

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /target/
 **/*.rs.bk
 *.pdb
-Cargo.lock
+# Cargo.lock is committed for binary/application projects to ensure reproducible builds
 
 # Python
 __pycache__/
