fix: resolve macOS CI cache setup hashFiles errors
- Use specific file paths instead of glob patterns in hashFiles()
- Add fallback values ('no-cargo', 'no-lock', 'no-tests') when files don't exist
- Prevents 'Fail to hash files under directory' errors on macOS runners
- Improves cache key reliability across different environments

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -37,9 +37,9 @@ runs:
           target/release/
           target/debug/
           build/
-        key: ${{ runner.os }}-build-${{ hashFiles('**/Cargo.lock', '**/pyproject.toml') }}-${{ github.sha }}
+        key: ${{ runner.os }}-build-${{ hashFiles('Cargo.lock') }}-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-build-${{ hashFiles('**/Cargo.lock', '**/pyproject.toml') }}-
+          ${{ runner.os }}-build-${{ hashFiles('Cargo.lock') }}-
           ${{ runner.os }}-build-
 
     - name: Prefetch Cargo crates (retry)
