fix: resolve macOS abi3 wheel build issues
- Add explicit MACOSX_DEPLOYMENT_TARGET=10.13 for abi3 compatibility
- Configure setuptools-rust with universal2 target for macOS
- Ensure proper abi3 wheel naming on macOS platform

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -71,6 +71,7 @@ runs:
           pkg-config
 
     - name: Cache Rust build
+      if: runner.os != 'macOS' # Work around actions/runner hashFiles bug on macOS
       uses: actions/cache@v4
       with:
         path: |
