--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ test = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "coverage[toml]>=7.0",
+    "websockets>=10.0",
 ]
 dev = [
     { include-group = "test" },
