ci: ignore mod.rs files in coverage reports
Rust mod.rs files only contain module declarations and re-exports,
with no logic to test. Excluding them provides more accurate coverage.

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -106,6 +106,7 @@ ignore:
   - ".github/"
   - "scripts/"
   - "python/auroraview/_version.py"  # Auto-generated
+  - "**/mod.rs"  # Rust module definition files (no logic to test)
 
 # GitHub checks
 github_checks:
