feat(pack): complete MVP for auroraview-pack and auroraview-cli crates
auroraview-pack enhancements:
- Add PackConfig builder pattern with fluent API
- Add PackMode helper methods (embeds_assets, requires_pyoxidizer, name)
- Add WindowStartPosition enum for window positioning
- Add window customization options (min_size, frameless, transparent, etc)
- Add check_dependencies() and is_pyoxidizer_available() utilities
- Add new exports: TargetPlatform, WindowStartPosition
- Remove legacy template files in favor of Askama templates

auroraview-cli enhancements:
- Add 'info' subcommand for version and environment information
- Add --frameless, --always-on-top, --no-resize, --user-agent flags

Testing:
- Add 11 end-to-end integration tests for pack generator
- Test URL mode and Frontend mode packaging flows
- Add cargo check compilation verification tests
- Use tempfile crate for automatic test cleanup
- All 25 tests pass (14 unit + 11 integration)

Code passes cargo fmt and clippy checks

Signed-off-by: longhao <hal.long@outlook.com>

--- a/crates/auroraview-pack/Cargo.toml
+++ b/crates/auroraview-pack/Cargo.toml
@@ -36,6 +36,10 @@ askama = "0.12"
 # Embed static assets
 rust-embed = "8.5"
 
+[dev-dependencies]
+# Testing utilities
+tempfile = "3.20"
+
 [features]
 default = []
 # Enable PyOxidizer runtime integration (future feature)
