--- a/crates/auroraview-core/Cargo.toml
+++ b/crates/auroraview-core/Cargo.toml
@@ -31,6 +31,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simd-json = "0.15"
 
+# Binary encoding (for fs plugin)
+base64 = "0.22"
+
 # MIME type detection
 mime_guess = "2.0"
 
