feat(testing): add PlaywrightBrowser for Playwright-based UI testing
- Add PlaywrightBrowser class with full Playwright API access
- Auto-inject AuroraView bridge script into pages
- Support headless mode for CI/CD testing
- Add comprehensive test suite (15 tests)
- Update README.md and README_zh.md with testing documentation
- Remove skipped WebView2-based test files (GIL blocking issues)

New files:
- python/auroraview/testing/auroratest/playwright_browser.py
- tests/python/integration/test_playwright_browser.py
- crates/auroraview-core/src/assets/js/features/network_intercept.js
- crates/auroraview-core/src/assets/js/features/screenshot.js
- crates/auroraview-core/src/assets/js/features/test_callback.js

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -12,6 +12,12 @@ minversion = 6.0
 # Add current directory to Python path
 pythonpath = .
 
+# Asyncio mode for pytest-asyncio
+# Use 'strict' mode to require explicit @pytest.mark.asyncio markers
+# This prevents conflicts with Playwright's sync API
+asyncio_mode = strict
+asyncio_default_fixture_loop_scope = function
+
 # Output options
 # addopts are defined centrally in pyproject.toml to ensure coverage settings apply
 
@@ -25,4 +31,5 @@ markers =
     headless: Tests that can run without display
     integration: Integration tests
     unit: Unit tests
+    asyncio: Async tests
 
