--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,12 @@ qt = [
 test = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "pytest-asyncio>=0.21.0",
     "coverage[toml]>=7.0",
     "websockets>=10.0",
+]
+playwright = [
+    "playwright>=1.40.0; python_version>='3.8'",
 ]
 dev = [
     { include-group = "test" },
