--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,22 +96,20 @@ jobs:
       - name: Run Rust tests with coverage
         run: |
           # Exclude tests that require Python bindings (pyo3)
-          # ipc_batch_integration_tests requires Python DLL which is not available in pure Rust coverage
+          # ipc_batch_integration requires Python DLL which is not available in pure Rust coverage
           cargo llvm-cov --features "test-helpers" --lcov --output-path rust-coverage.lcov \
-            --test config_integration_tests \
-            --test file_protocol_integration_tests \
-            --test http_discovery_integration_tests \
-            --test ipc_json_integration_tests \
-            --test ipc_message_queue_integration_tests \
-            --test lifecycle_integration_tests \
-            --test mdns_integration_tests \
-            --test parent_monitor_integration_tests \
-            --test port_allocator_integration_tests \
-            --test protocol_handlers_integration_tests \
-            --test protocol_integration_tests \
-            --test standalone_integration_tests \
-            --test timer_integration_tests \
-            --test window_utils_integration_tests
+            --test config_integration \
+            --test file_protocol_integration \
+            --test http_discovery_integration \
+            --test ipc_json_integration \
+            --test ipc_message_queue_integration \
+            --test lifecycle_integration \
+            --test mdns_integration \
+            --test port_allocator_integration \
+            --test protocol_handlers_integration \
+            --test protocol_integration \
+            --test standalone_integration \
+            --test timer_integration
 
       - name: Upload Rust coverage to Codecov
         uses: codecov/codecov-action@v5
